Major: YAML config file supports server's all command line args
add support for debug, use_file, in_filenames, out_filename

--- a/matsense/blank_template.yaml
+++ b/matsense/blank_template.yaml
@@ -12,6 +12,17 @@ server_mode:
   ## enumerate all serial ports
   enumerate: ~
 
+  ## (suppress serial) simulated data source without actual serial connection
+  ## debug mode: true, false
+  debug: ~
+
+  ## (suppress serial) use file as data source or not: true, false
+  use_file: ~
+  ## input filename(s), filename or a list of filenames
+  in_filenames: ~
+  ## output filename, default filename is used when not provided
+  out_filename: ~
+
 client_mode:
   ## make client present raw data
   raw: ~
