Major: config yaml adds options for matdata usage
Minor: reorder options and improve comments

--- a/matsense/blank_template.yaml
+++ b/matsense/blank_template.yaml
@@ -2,6 +2,7 @@
 
 ## ~ for defaults
 
+## configurations for matserver mode
 server_mode:
   ## enable backend service
   service: ~
@@ -23,12 +24,26 @@ server_mode:
   ## output filename, default filename is used when not provided
   out_filename: ~
 
+## configurations for matclient mode
 client_mode:
   ## make client present raw data
   raw: ~
   ## interactive command line mode
   interactive: ~
 
+## configurations for matdata mode
+data_mode:
+  ## process file data instead of visualization
+  process: ~
+
+## configurations for file data
+data:
+  ## input filename(s), filename or a list of filenames
+  in_filenames: ~
+  ## output filename, default filename is used when not provided
+  out_filename: ~
+
+## configurations for matrix sensor
 sensor:
   ## sensor shape: [16, 16], [8, 8], [6, 24]
   shape: ~
@@ -38,6 +53,7 @@ sensor:
   ## |- for multiline without a newline in the end
   mask: ~
 
+## configurations for serial port
 serial:
   ## baudrate: 9600, 250000, 500000, 1000000
   baudrate: ~
@@ -50,7 +66,8 @@ serial:
   ## support IMU data
   imu: ~
 
-connection:  ## use defaults
+## configurations for client-server connections
+connection:
   ## use UDP or UNIX domain socket
   udp: ~
   ## udp address format: 127.0.0.1:20503
@@ -58,13 +75,17 @@ connection:  ## use defaults
   server_address: ~
   client_address: ~
 
+## configurations for data processing
 process:
+  ### voltage to the reciprocal of resistance
   ## reference voltage: 255, 255/3.6*3.3
   V0: ~
   ## constant factor: 1
   R0_RECI: ~
   ## convert voltage to resistance: true
   convert: ~
+
+  ### server data processing
   ## time of warming up in seconds: 1
   warm_up: ~
   ## spatial filter: none, ideal, butterworth, gaussian
@@ -83,6 +104,13 @@ process:
   cali_frames: ~
   ## calibration frame window size, 0 for static and >0 for dynamic: 0, 10000
   cali_win_size: ~
+  ## intermediate result: 0, 1, 2
+    ## 0: convert voltage to reciprocal resistance
+    ## 1: convert & spatial filter
+    ## 2: convert & spatial filter & temporal filter
+  intermediate: ~
+
+  ### (optional) client data processing
   ## interpolation shape, default to sensor.shape
   interp: ~
   ## interpolation order: 3
@@ -95,11 +123,6 @@ process:
   threshold: ~
   ## special check for certain hardwares: false
   special_check: ~
-  ## intermediate result: 0, 1, 2
-    ## 0: convert voltage to reciprocal resistance
-    ## 1: convert & spatial filter
-    ## 2: convert & spatial filter & temporal filter
-  intermediate: ~
 
 pointing:
   ## value bound for checking cursor moving state: 0
@@ -111,6 +134,7 @@ pointing:
   ## smoothing
   alpha: ~
 
+## configurations for visualization
 visual:
   ## using pyqtgraph or matplotlib
   pyqtgraph: ~
