Major: add config['process']['resi_opposite'] to convert voltage to the opposite number of resistance

--- a/matsense/blank_template.yaml
+++ b/matsense/blank_template.yaml
@@ -77,7 +77,8 @@ process:
   R0_RECI: ~
   ## convert voltage to resistance: true
   convert: ~
-
+  ## convert voltage to resistance's opposite number (otherwise reciprocal): true
+  resi_opposite: ~
   ### server data processing
   ## no filtering and calibration
   raw: ~
